--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>El equipo de desarrollo de esta aplicacion es el grupo 8, formado por miembros de los dobles de grados de Ingeniería Informatica- Ingeniería Software y Ingeniería Software - Matemáticas.</p>
                 <p>El proyecto se considera en su fase de desarrollo, y se estima que para principios del mes de diciembre se encuentre en su fase de lanzamiento. </p>
                 <p>ESPEREMOS QUE OS GUSTE</p>
-                <video controls id="videoAbajo">Video 2</video>
+                <video controls id="videoAbajo" src="emulator.mp4">Video 2</video>
             </div>
             <div id="ayuda">
                 <h2>AYUDA</h2>
