--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Noticia </title>
+        <title>Space Invader </title>
         <script src="app.js"></script>
         <link href="app.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
@@ -10,17 +10,17 @@
     <body>
         <div id="cabecera">
             <h1>SPACE INVADER APP</h1> 
-            <h2>¡Conquista la galaxia! </h2>
+            <h2 id="subtitle">¡Conquista la galaxia! </h2>
         </div>
         <div id="contenido">
-            <div id="noticia">
+            
                 <h2>HISTORIA</h2>
                 <p>Bienvenidos a la pagina web, del space invade creado para la practica de Procesos del Software de 3º.
                 </p>
                 <a href="https://www.urjc.es/">
                 Mas informacion sobre la universidad
                 </a><br>
-        
+        <div id="noticia">
                 <h2>PROYECTO</h2>
                   <p>El proyecto se basa en la realización del clasico juego del space invader para un movil android.<br>
                   Aunque parece que lo complicado de esta aplicacion es la realizacion del video juego, en lo que se basa el proyecto es el uso de la metodología scrum a la hora de la organización del mismo.
