--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
                     </li>
                 </ul>
             </div>
+            <div id="extras">
+                <h2>Extras</h2>
+                <p>En este apartado pondremos diferentes aportaciones extras</p>
+                <ul>
+                    <li>Tutorial:
+                        <a href="https://vimeo.com/185466129">vEnlace al video</a>
+                    </li>
+                    <li>Twitter:
+                        <a href="https://twitter.com/spaceinvaderg8"><img src="http://icons.iconarchive.com/icons/limav/flat-gradient-social/512/Twitter-icon.png"/></a>
+                    </li>
+                </ul>
+            </div>
         </div>
         
     </body>
