--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="contenido">
             
                 <h2>HISTORIA</h2>
-                <p>Bienvenidos a la pagina web, del space invade creado para la practica de Procesos del Software de 3º.
+                <p>Bienvenidos a la pagina web, del space invade creado para la práctica de Procesos del Software de 3º del grado en Ingeniería del Software y sus respectivos dobles grados de la Universidad Rey Juan Carlos.
                 </p>
                 <a href="https://www.urjc.es/">
                 Mas informacion sobre la universidad
@@ -52,10 +52,13 @@
                 <p>En este apartado pondremos diferentes aportaciones extras</p>
                 <ul>
                     <li>Tutorial:
-                        <a href="https://vimeo.com/185466129">vEnlace al video</a>
+                        <a href="https://vimeo.com/185466129">Enlace al video tutorial</a>
                     </li>
                     <li>Twitter:
-                        <a href="https://twitter.com/spaceinvaderg8"><img src="http://icons.iconarchive.com/icons/limav/flat-gradient-social/512/Twitter-icon.png"/></a>
+                        <a href="https://twitter.com/spaceinvaderg8"><img id="iconoTwitter" src="http://icons.iconarchive.com/icons/limav/flat-gradient-social/512/Twitter-icon.png"/></a>
+                    </li>
+                    <li>GitHub:
+                        <a href="https://twitter.com/spaceinvaderg8">Enlace al Github de desarrollo</a>
                     </li>
                 </ul>
             </div>
