--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
             <h2 id="subtitle">¡Conquista la galaxia! </h2>
         </div>
         <div id="contenido">
-            
-                <h2>HISTORIA</h2>
+        <div id="menu">
+            <li><a href="#historia">Historia</a></li>
+            <li><a href="#proyecto">Proyecto</a></li>
+            <li><a href="#ayuda">Ayuda</a></li>
+            <li><a href="#extra">Extra</a></li>
+        </div>    
+                <h2><a name="historia">HISTORIA</a></h2>
                 <p>Bienvenidos a la pagina web, del space invade creado para la práctica de Procesos del Software de 3º del grado en Ingeniería del Software y sus respectivos dobles grados de la Universidad Rey Juan Carlos.
                 </p>
                 <a href="https://www.urjc.es/">
                 Mas informacion sobre la universidad
                 </a><br>
         <div id="noticia">
-                <h2>PROYECTO</h2>
+                <h2><a name="proyecto">PROYECTO</a></h2>
                   <p>El proyecto se basa en la realización del clasico juego del space invader para un movil android.<br>
                   Aunque parece que lo complicado de esta aplicacion es la realizacion del video juego, en lo que se basa el proyecto es el uso de la metodología scrum a la hora de la organización del mismo.
                 </p>
@@ -34,7 +39,7 @@
                 <video controls id="videoAbajo" src="emulator.mp4">Video 2</video>
             </div>
             <div id="ayuda">
-                <h2>AYUDA</h2>
+                <h2><a name="ayuda">AYUDA</a></h2>
                 <p>En este apartado os explicaremos el facil funcionamiento del juego</p>
                 <ul>
                     <li>Movimientos:
@@ -51,7 +56,7 @@
                 </ul>
             </div>
             <div id="extras">
-                <h2>Extras</h2>
+                <h2><a name="extra">Extras</a></h2>
                 <p>En este apartado pondremos diferentes aportaciones extras</p>
                 <ul>
                     <li>Tutorial:
