--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#proyecto">Proyecto</a></li>
                 <li><a href="#ayuda">Ayuda</a></li>
                 <li><a href="#extra">Extra</a></li>
+                <li><a href="#agil">Metodologia Agil</a></li>
             </ul>
         </div>    
                 <h2><a name="historia">HISTORIA</a></h2>
@@ -71,6 +72,66 @@
                         <a href="https://twitter.com/spaceinvaderg8">Enlace al Github de desarrollo</a>
                     </li>
                 </ul>
+            </div>
+            <div id="metodologia">
+                <h2><a name="agil">METODOLOGÍA AGIL</a></h2>
+                <p>La metodología ágil es una forma de desarrollo pensada principalmente para los proyectos en los que el cliente está muy involucrado durante el desarrollo del mismo, ya que no se hace un análisis de requisitos inicial y final sino que los requerimientos del cliente se van incorporando poco en poco en periodos de tiempo denominados SPRINTS en los cuales se van haciendo pequeñas entregas al cliente.</p>
+                <p>A continuación, hemos destacado diferentes puntos importantes en los cuales hay diferencias con los otros métodos de desarrollo de software, ya sea iterativo o cascada.</p>
+                <p>1.	FASES DE UN SPRINT</p>
+                <p>Las fases de un proyecto ágil son las siguientes:</p>
+                <ul>
+                    <li><b>SPRINT PLANNING:</b>
+                    <p> Esta es la primera fase del sprint, en esta fase se realiza una reunión en la cual se deciden las diferentes historias técnicas y de usuario que se tienen que realizar durante el sprint.
+                    </p></li>
+                    <li><b>DESARROLLO:</b> 
+                    <p>Esta fase es la más grande ya que es donde realmente se concentra toda la realización de la tarea pedida por el cliente. Para organizar este tipo de desarrollos se utiliza SCRUM, esto es principalmente dividir el trabajo en 3 columnas (TO DO, DOING, DONE) e ir pasando cada tarea a realizar de una a otra en función se vayan realizando en el proyecto. Hay herramientas como Trello.</p>
+                    <img src="trello.png" id="trello"class="fotosagil"/>
+                    <p>Un tema muy importante es el orden que tienen las diferentes tareas ya que se ordenan en función a los puntos de historia, es decir la importancia que le da el cliente a dicha tarea, siendo lógicamente las que más importancia tiene las primeras en realizarse. Dentro de la fase de Doing se realiza ya el testing, siendo esta una de las principales diferencias con otras metodologías.</p>
+                    </li>
+                    <li><b>RETROSPECTIVA:</b>
+                    <p>En esta fase del sprint se comprueba con un vistazo  lo realizado durante el sprint y se ponen en común cosas que    se han hecho bien, mal o regular para mejorar para siguientes sprints.</p>
+                    <img src="retrospectiva.png" id="retrospectiva" class="fotosagil"/>
+                    </li>	
+                    <li><b>REVIEW:</b>
+                    <p>Esta fase final del sprint se basa principalmente en la entrega al cliente de lo realizado en el sprint.</p>
+                    </li>
+                </ul>
+                <p><b>2.	EQUIPO DE PROYECTO</b></p>
+                <p>El equipo es uno de los principales elementos de la metodología ágil, ya que son la base de todo proyecto.
+                Para una buena realización de la metodología ágil el equipo tiene que ser un equipo completo, equilibrado y de un tamaño de 7 personas +-2.</p>
+                <p>Para comprobar si un equipo está equilibrado se debe realizar un Tablero de multifuncionalidad donde se verán las capacidades de cada miembro del equipo. Es casi imprescindible que en cada columna haya al menos una * y uno o varios.</p>
+                <img src="multifuncionalida.png" id="delegacion" class="fotosagil"/>
+                <p><b>3.ORGANIZACIÓN</b></p>
+                <p>Para organizar un equipo es imprescindible delimitar unos roles en el equipo.</p>
+                <ul><li>Product Owner</li>
+                <li>Scrum Master</li>
+                <li>Equipo</li>
+                </ul>
+                <p>El Product Owner forma parte del negocio. Es el propietario del producto y gestiona las necesidades que serán satisfechas por el proyecto y asegura el valor del trabajo que el equipo lleva a cabo. Es un rol primario junto al equipo Scrum.</p>
+                <p>Una vez asignado a cada uno su puesto dentro del grupo de trabajo, se debe realizar un tablero de delegación para indicar, como se toman decisiones y quien las toma.</p>
+                <img src="delegacion.png" id="delegacion" class="fotosagil"/>
+                <p>Para el día a día es bueno conocer cómo se encuentran los componentes del equipo y también reconocer los méritos cuando uno realiza un buen trabajo. Para ello se debe realizar un tablero de niko- niko y uno de kudos o recompensas.
+                </p>
+                <img src="nikoniko.png" class="fotosagil"/>
+                <img src="kudos.png" class="fotosagil"/>
+                <p><b>4.	HISTORIA DE USUARIO </b></p>
+                <p> Es lo que el cliente o el usuario quiere que se implemente: son una descripción breve, de una funcionalidad software tal y como la percibe el usuario. Debe ser pequeña. Para reunir varias de ellas se realizan EPICs. Son historias de usuario grandes que sirven para contar una funcionalidad amplia.</p>
+                <p>El Product Owner se encarga de los Temas (meses, años) (conjuntos de Epics o Epopeyas), los Epics (semanas, meses) (conjuntos de Historias de Usuario) y las Historias de Usuario (2/3 días) (conjuntos de Tareas). El equipo se encarga de las Tareas (horas). Además, las Epopeyas y las Historias de Usuario representan el “qué” y las Tareas representan el “cómo”.</p>
+                <p><b>5. ESTIMACIÓN </b></p>
+                <p> Cuando hablamos de estimar, es mirar hacia adelante para intentar adivinar el futuro. Cuando estimamos, podemos mirar dos cosas: cuándo tendré algo y cuánto puedo hacer. La estimación es importante porque tiene relación el cuándo por el dinero.<br>
+                A menor experiencia, más pobre será la estimación. También empeora si el cliente no tiene claro lo que quiere.</p>
+                <p>Si en este modelo, el tiempo es dinero, las empresas buscarán lo más barato. Esto conduce a que se reduzcan los tiempos. Si los reducimos demasiado, el cliente será el afectado porque no recibirá el producto
+                Es importante recordar que el Product Backlog nunca debe estar ordenado por estimación. El equipo se encarga de estimar, ya que no es responsabilidad del Product Owner. <br>
+                En agilidad, usamos la predicción de la velocidad y los puntos historia para estimar la duración de un proyecto.</p> 
+                <p><b>6. PUNTOS HISTORIA</b> </p>
+                <p>No existe una fórmula para medir los puntos historia. Los puntos historia nos sirven principalmente para dos cosas: medir el tiempo y la velocidad del equipo. El punto historia mide la complejidad y el esfuerzo junto con el riesgo (incertidumbre). A mayor puntos historia, más compleja se supone la tarea.</p>
+
+                <p><b>Conclusiones importantes</b></p> 
+                <p> Estimar por horas es lo peor por la herencia industrial, porque eran seleccionadas por los que no trabajaban. Además, era mejor el que echaba más horas. También es malo contar el avance por horas. 
+                Esta visión evolucionó al trabajo completado, añadiendo puntos de historia a las historias de usuario. El problema es asignar mal los puntos de historia, es decir, que lo que se haya hecho no valga para nada (perder la orientación del valor). </p>
+                <p>La última forma de estimar es el valor completado. Que consiste en hacer primero aquellas tareas que más valor tienen. Si hay un buen Product Owner ordenando por valor el Product Backlog, no hace falta estimar.
+                </p>
+
             </div>
         </div>
         
